# cmake-examples

link_lib/: MathFuncs.cpp  MathFuncs.h
onefile/: CMakeLists.txt
shared_lib/: CMakeLists.txt  Makefile  main.cpp
